Updated with JWTtokenAuth